--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,14 @@
     <packaging>pom</packaging>
 
     <name>horse-racing-parser-parent</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.handycapper.io</url>
+    <url>https://github.com/robinhowlett/horse-racing-parser-parent</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <horse-racing-data-model.version>1.0.0.BUILD-SNAPSHOT</horse-racing-data-model.version>
+        <horse-racing-data-model.version>1.0.0.RELEASE</horse-racing-data-model.version>
         <jackson.version>2.8.8</jackson.version>
         <spring-hateoas.version>0.24.0.RELEASE</spring-hateoas.version>
         <junit.version>4.12</junit.version>
@@ -104,6 +103,7 @@
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
             </dependency>
+
             <!-- Lombok code generation for cleaner-looking classes -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -111,6 +111,7 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
+            
             <!-- Tests: add with scope=test -->
             <dependency>
                 <groupId>junit</groupId>
