--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
 
     <profiles>
         <profile>
-            <id>sign</id>
+            <id>release</id>
             <build>
                 <plugins>
                     <plugin>
